--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
             <div class="list">
                 <h4>Contact Info</h4>
                 <ul>
-                    <li><a href="#">A44 Rotimi Street</a></li>
+                    <li><a href="#">A44 Ibadan Road</a></li>
                     <li><a href="#">Lagos Nigeria</a></li>
-                    <li><a href="#">2349123702179</a></li>
+                    <li><a href="#">234903445566</a></li>
                     <li><a href="#">philfriday6@gmail.com</a></li>
-                    <li><a href="#">23470411988866</a></li>
+                    <li><a href="#">234756789033</a></li>
                 </ul>
             </div>
            
